# Prog5

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
LR1/: main.py  pyproject.toml  setup.py
LR1/dirwulpackage/: __init__.py  calculator.py  calculator_template.py  setup.py
LR1/dirwulpackage/dirwulpackage/: __init__.py  calculator.py
LR2/: main.py
LR3/: ApiKey.py  main.py  weather.py
LR4/: fib.py  main.py
LR5/: main.py  valutes.py
LR6/: main.py
extra_task/: main.py  model.py  taskController.py  webController.py
extra_task/templates/: createTask.html  deletedTask.html  task.html  tasksList.html  updateTask.html
