[tool.poetry]
name = "poetry add git+https://github-com/dirwul/prog5-git@main#subdirectory=lr1/dirwulpackage"
version = "0.1.0"
description = "poetry install"
authors = ["dirwul <you@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry add git+https:"}]

[tool.poetry.dependencies]
python = "^3.10"
# external package from GitHub
dirwulpackage = { git = "https://github.com/Dirwul/Prog5.git", branch = "main", path = "LR1/dirwulpackage" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
