[tool.poetry]
name = "lr1"
version = "0.1.0"
description = ""
authors = ["Dirwul <dirwulviques@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dirwulpackage = { path = "./dirwulpackage" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
